Update find_usage_in_items function to find variable usages by parsing functions in to ASTs.

--- a/nbs/builders/colors.ipynb
+++ b/nbs/builders/colors.ipynb
@@ -995,7 +995,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_all_color_families() -> List[str]:\n",
+    "def get_all_color_families(\n",
+    ") -> List[str]:  # TODO: Add return description\n",
     "    \"\"\"Get list of all Tailwind color family names.\"\"\"\n",
     "    return [c.value for c in ColorFamily]"
    ]
@@ -1008,7 +1009,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_all_shades() -> List[str]:\n",
+    "def get_all_shades(\n",
+    ") -> List[str]:  # TODO: Add return description\n",
     "    \"\"\"Get list of all Tailwind shade values.\"\"\"\n",
     "    return [s.value for s in ColorShade]"
    ]
@@ -1021,7 +1023,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_all_color_specs() -> List[str]:\n",
+    "def get_all_color_specs(\n",
+    ") -> List[str]:  # TODO: Add return description\n",
     "    \"\"\"Get list of all valid color-shade combinations.\"\"\"\n",
     "    specs = []\n",
     "    for family in ColorFamily:\n",
