--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -240,7 +240,12 @@
     "class ScaledFactory(UtilityFactory[ScaledUtility]):\n",
     "    \"\"\"Factory for creating scaled utilities with enhanced attribute access.\"\"\"\n",
     "    \n",
-    "    def __new__(cls, prefix: Optional[str] = None, config: Optional[ScaleConfig] = None, doc: Optional[str] = None):\n",
+    "    def __new__(\n",
+    "        cls,  # TODO: Add type hint and description\n",
+    "        prefix: Optional[str] = None,  # TODO: Add description\n",
+    "        config: Optional[ScaleConfig] = None,  # TODO: Add description\n",
+    "        doc: Optional[str] = None  # TODO: Add description\n",
+    "    ):\n",
     "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
     "        # If this is a subclass, just create a normal instance\n",
     "        # Subclasses will add properties in __init__ if needed\n",
@@ -260,8 +265,12 @@
     "                for key, value in config.special.items():\n",
     "                    prop_name = key.replace(\"-\", \"_\")\n",
     "                    # Create a property that returns a ScaledUtility instance\n",
-    "                    def make_property(val):\n",
+    "                    def make_property(\n",
+    "                        val  # TODO: Add type hint and description\n",
+    "                    ):\n",
+    "                        \"TODO: Add function description\"\n",
     "                        def getter(self):\n",
+    "                            \"TODO: Add function description\"\n",
     "                            instance = ScaledUtility(self.prefix, self.config)\n",
     "                            instance._value = val\n",
     "                            return instance\n",
@@ -274,8 +283,12 @@
     "                    prop_name = f\"_{named_scale.name}\" if named_scale.name[0].isdigit() else named_scale.name\n",
     "                    prop_name = prop_name.replace(\"-\", \"_\")\n",
     "                    # Create a property that returns a ScaledUtility instance\n",
-    "                    def make_property(scale_name):\n",
+    "                    def make_property(\n",
+    "                        scale_name  # TODO: Add type hint and description\n",
+    "                    ):\n",
+    "                        \"TODO: Add function description\"\n",
     "                        def getter(self):\n",
+    "                            \"TODO: Add function description\"\n",
     "                            instance = ScaledUtility(self.prefix, self.config)\n",
     "                            instance._value = scale_name\n",
     "                            return instance\n",
@@ -320,8 +333,12 @@
     "                    continue\n",
     "                    \n",
     "                # Create a property that returns a ScaledUtility instance\n",
-    "                def make_property(val):\n",
+    "                def make_property(\n",
+    "                    val  # TODO: Add type hint and description\n",
+    "                ):\n",
+    "                    \"TODO: Add function description\"\n",
     "                    def getter(self):\n",
+    "                        \"TODO: Add function description\"\n",
     "                        instance = ScaledUtility(self.prefix, self.config)\n",
     "                        instance._value = val\n",
     "                        return instance\n",
@@ -338,8 +355,12 @@
     "                    continue\n",
     "                    \n",
     "                # Create a property that returns a ScaledUtility instance\n",
-    "                def make_property(scale_name):\n",
+    "                def make_property(\n",
+    "                    scale_name  # TODO: Add type hint and description\n",
+    "                ):\n",
+    "                    \"TODO: Add function description\"\n",
     "                    def getter(self):\n",
+    "                        \"TODO: Add function description\"\n",
     "                        instance = ScaledUtility(self.prefix, self.config)\n",
     "                        instance._value = scale_name\n",
     "                        return instance\n",
@@ -476,7 +497,11 @@
     "class NegativeFactory:\n",
     "    \"\"\"Factory for creating negative variants.\"\"\"\n",
     "    \n",
-    "    def __new__(cls, prefix: str, config: ScaleConfig):\n",
+    "    def __new__(\n",
+    "        cls,  # TODO: Add type hint and description\n",
+    "        prefix: str,  # TODO: Add description\n",
+    "        config: ScaleConfig  # TODO: Add description\n",
+    "    ):\n",
     "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
     "        # Create a unique subclass for this instance\n",
     "        class_name = f\"NegativeFactory_{prefix}_{id(config)}\"\n",
@@ -492,8 +517,12 @@
     "                    continue\n",
     "                prop_name = key.replace(\"-\", \"_\")\n",
     "                # Create a property that returns a negative ScaledUtility instance\n",
-    "                def make_property(val):\n",
+    "                def make_property(\n",
+    "                    val  # TODO: Add type hint and description\n",
+    "                ):\n",
+    "                    \"TODO: Add function description\"\n",
     "                    def getter(self):\n",
+    "                        \"TODO: Add function description\"\n",
     "                        instance = ScaledUtility(self.prefix, self.config, negative=True)\n",
     "                        instance._value = val\n",
     "                        return instance\n",
@@ -1171,7 +1200,11 @@
     "class SimpleFactory(BaseFactory):\n",
     "    \"\"\"Factory for utilities that are simple string values with modifier support.\"\"\"\n",
     "    \n",
-    "    def __new__(cls, values_dict: Optional[Dict[str, str]] = None, doc: Optional[str] = None):\n",
+    "    def __new__(\n",
+    "        cls,  # TODO: Add type hint and description\n",
+    "        values_dict: Optional[Dict[str, str]] = None,  # TODO: Add description\n",
+    "        doc: Optional[str] = None  # TODO: Add description\n",
+    "    ):\n",
     "        \"\"\"Create a new instance with dynamic properties for tab-completion.\"\"\"\n",
     "        # If this is a subclass calling super().__new__, just create the instance normally\n",
     "        # We'll add properties later in __init__\n",
@@ -1191,8 +1224,12 @@
     "                prop_name = key.replace(\"-\", \"_\")\n",
     "                \n",
     "                # Create a property that returns the cached utility\n",
-    "                def make_property(css_val):\n",
+    "                def make_property(\n",
+    "                    css_val  # TODO: Add type hint and description\n",
+    "                ):\n",
+    "                    \"TODO: Add function description\"\n",
     "                    def getter(self):\n",
+    "                        \"TODO: Add function description\"\n",
     "                        # Access the cache directly from __dict__ to avoid triggering __getattr__\n",
     "                        cache = self.__dict__.get('_utility_cache', {})\n",
     "                        if css_val not in cache:\n",
@@ -1215,7 +1252,10 @@
     "        # Default case\n",
     "        return object.__new__(cls)\n",
     "    \n",
-    "    def _add_dynamic_properties(self, values_dict: Dict[str, str]):\n",
+    "    def _add_dynamic_properties(\n",
+    "        self,\n",
+    "        values_dict: Dict[str, str]  # TODO: Add description\n",
+    "    ):\n",
     "        \"\"\"Add properties dynamically to the instance for tab-completion.\"\"\"\n",
     "        # Create a new class that inherits from the current class\n",
     "        current_class = self.__class__\n",
@@ -1240,8 +1280,12 @@
     "                continue\n",
     "                \n",
     "            # Create a property that returns the cached utility\n",
-    "            def make_property(css_val):\n",
+    "            def make_property(\n",
+    "                css_val  # TODO: Add type hint and description\n",
+    "            ):\n",
+    "                \"TODO: Add function description\"\n",
     "                def getter(self):\n",
+    "                    \"TODO: Add function description\"\n",
     "                    # Access the cache directly from __dict__ to avoid triggering __getattr__\n",
     "                    cache = self.__dict__.get('_utility_cache', {})\n",
     "                    if css_val not in cache:\n",
