--- a/nbs/cli/utils.ipynb
+++ b/nbs/cli/utils.ipynb
@@ -39,6 +39,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import ast\n",
     "import inspect\n",
     "from typing import List, Tuple, Optional, Dict, Any, Callable, Union\n",
     "from dataclasses import dataclass\n",
@@ -552,6 +553,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "129132ee-a55c-4e81-a867-912c20cd0c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def find_variable_usages(\n",
+    "    func_src: str,  # TODO: Add description\n",
+    "    var_name: str  # TODO: Add description\n",
+    "): # TODO: Add type hint\n",
+    "    \"\"\"Find variable usages by parsing function into an AST\"\"\"\n",
+    "    # Parse into an AST\n",
+    "    tree = ast.parse(func_src)\n",
+    "\n",
+    "    matches = []\n",
+    "\n",
+    "    class VarVisitor(ast.NodeVisitor):\n",
+    "        \"TODO: Add class description\"\n",
+    "        def visit_Name(\n",
+    "            self,\n",
+    "            node  # TODO: Add type hint and description\n",
+    "        ):\n",
+    "            \"TODO: Add function description\"\n",
+    "            if node.id == var_name:\n",
+    "                matches.append((node.lineno, node.col_offset, type(node.ctx).__name__))\n",
+    "            self.generic_visit(node)\n",
+    "\n",
+    "    VarVisitor().visit(tree)\n",
+    "    return matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9gjixn0wwin",
    "metadata": {},
    "outputs": [],
@@ -565,13 +599,12 @@
     ") -> List[Tuple[str, Any]]:  # List of (module_name, item) tuples\n",
     "    \"\"\"Find items that use a specific target (factory/helper).\"\"\"\n",
     "    usage_items = []\n",
-    "    patterns = check_factory_usage_patterns(target_name)\n",
-    "    \n",
+    "\n",
     "    for module_name, module_items in items.items():\n",
     "        for item in module_items:\n",
     "            try:\n",
-    "                source = source_getter(item)\n",
-    "                if source and any(re.search(pattern, source) for pattern in patterns):\n",
+    "                matches = find_variable_usages(source_getter(item), target_name)\n",
+    "                if matches:\n",
     "                    usage_items.append((module_name, item))\n",
     "            except (AttributeError, TypeError):\n",
     "                # Skip items where source can't be extracted\n",
@@ -681,7 +714,10 @@
     "    \n",
     "    modules = []\n",
     "    \n",
-    "    def discover_modules_recursive(package_path: str, base_name: str = \"\"):\n",
+    "    def discover_modules_recursive(\n",
+    "        package_path: str,  # TODO: Add description\n",
+    "        base_name: str = \"\"  # TODO: Add description\n",
+    "    ):\n",
     "        \"\"\"Recursively discover modules and submodules.\"\"\"\n",
     "        try:\n",
     "            # Import the package\n",
@@ -973,24 +1009,7 @@
    "execution_count": null,
    "id": "c60a7f05",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<unknown>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
-      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/IPython/core/interactiveshell.py:3699\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  Cell \u001b[92mIn[29]\u001b[39m\u001b[92m, line 2\u001b[39m\n    import nbdev; nbdev.nbdev_export()\n",
-      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/fastcore/script.py:116\u001b[39m in \u001b[95m_f\u001b[39m\n    if not mod: return func(*args, **kwargs)\n",
-      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/nbdev/doclinks.py:160\u001b[39m in \u001b[95mnbdev_export\u001b[39m\n    _build_modidx()\n",
-      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/nbdev/doclinks.py:116\u001b[39m in \u001b[95m_build_modidx\u001b[39m\n    try: res['syms'].update(_get_modidx((dest.parent/file).resolve(), code_root, nbs_path=nbs_path))\n",
-      "  File \u001b[92m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/site-packages/nbdev/doclinks.py:93\u001b[39m in \u001b[95m_get_modidx\u001b[39m\n    for tree in ast.parse(cell.code).body:\n",
-      "\u001b[36m  \u001b[39m\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/cjm-fasthtml-tailwind/lib/python3.11/ast.py:50\u001b[39m\u001b[36m in \u001b[39m\u001b[35mparse\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn compile(source, filename, mode, flags,\u001b[39m\n",
-      "  \u001b[36mFile \u001b[39m\u001b[32m<unknown>:14\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mlist_all_examples, get_example_by_name, list_module_examples\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
