--- a/nbs/core/base.ipynb
+++ b/nbs/core/base.ipynb
@@ -304,142 +304,196 @@
     "    \n",
     "    # Pseudo-class modifiers\n",
     "    @property\n",
-    "    def hover(self) -> 'BaseUtility':\n",
+    "    def hover(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply hover modifier.\"\"\"\n",
     "        return self.with_modifiers(\"hover\")\n",
     "    \n",
     "    @property\n",
-    "    def focus(self) -> 'BaseUtility':\n",
+    "    def focus(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply focus modifier.\"\"\"\n",
     "        return self.with_modifiers(\"focus\")\n",
     "    \n",
     "    @property\n",
-    "    def active(self) -> 'BaseUtility':\n",
+    "    def active(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply active modifier.\"\"\"\n",
     "        return self.with_modifiers(\"active\")\n",
     "    \n",
     "    @property\n",
-    "    def visited(self) -> 'BaseUtility':\n",
+    "    def visited(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply visited modifier.\"\"\"\n",
     "        return self.with_modifiers(\"visited\")\n",
     "    \n",
     "    @property\n",
-    "    def disabled(self) -> 'BaseUtility':\n",
+    "    def disabled(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply disabled modifier.\"\"\"\n",
     "        return self.with_modifiers(\"disabled\")\n",
     "    \n",
     "    @property\n",
-    "    def checked(self) -> 'BaseUtility':\n",
+    "    def checked(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply checked modifier.\"\"\"\n",
     "        return self.with_modifiers(\"checked\")\n",
     "    \n",
     "    @property\n",
-    "    def required(self) -> 'BaseUtility':\n",
+    "    def required(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply required modifier.\"\"\"\n",
     "        return self.with_modifiers(\"required\")\n",
     "    \n",
     "    @property\n",
-    "    def invalid(self) -> 'BaseUtility':\n",
+    "    def invalid(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply invalid modifier.\"\"\"\n",
     "        return self.with_modifiers(\"invalid\")\n",
     "    \n",
     "    @property\n",
-    "    def valid(self) -> 'BaseUtility':\n",
+    "    def valid(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply valid modifier.\"\"\"\n",
     "        return self.with_modifiers(\"valid\")\n",
     "    \n",
     "    # Pseudo-element modifiers\n",
     "    @property\n",
-    "    def before(self) -> 'BaseUtility':\n",
+    "    def before(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply before pseudo-element modifier.\"\"\"\n",
     "        return self.with_modifiers(\"before\")\n",
     "    \n",
     "    @property\n",
-    "    def after(self) -> 'BaseUtility':\n",
+    "    def after(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply after pseudo-element modifier.\"\"\"\n",
     "        return self.with_modifiers(\"after\")\n",
     "    \n",
     "    @property\n",
-    "    def placeholder(self) -> 'BaseUtility':\n",
+    "    def placeholder(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply placeholder modifier.\"\"\"\n",
     "        return self.with_modifiers(\"placeholder\")\n",
     "    \n",
     "    @property\n",
-    "    def selection(self) -> 'BaseUtility':\n",
+    "    def selection(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply selection modifier.\"\"\"\n",
     "        return self.with_modifiers(\"selection\")\n",
     "    \n",
     "    # Responsive modifiers\n",
     "    @property\n",
-    "    def sm(self) -> 'BaseUtility':\n",
+    "    def sm(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply small breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"sm\")\n",
     "\n",
     "    @property\n",
-    "    def max_sm(self) -> 'BaseUtility':\n",
+    "    def max_sm(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply max small breakpoint modifier variant.\"\"\"\n",
     "        return self.with_modifiers(\"max-sm\")\n",
     "    \n",
     "    @property\n",
-    "    def md(self) -> 'BaseUtility':\n",
+    "    def md(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply medium breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"md\")\n",
     "\n",
     "    @property\n",
-    "    def max_md(self) -> 'BaseUtility':\n",
+    "    def max_md(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply max medium breakpoint modifier variant.\"\"\"\n",
     "        return self.with_modifiers(\"max-md\")\n",
     "    \n",
     "    @property\n",
-    "    def lg(self) -> 'BaseUtility':\n",
+    "    def lg(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply large breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"lg\")\n",
     "    \n",
     "    @property\n",
-    "    def xl(self) -> 'BaseUtility':\n",
+    "    def xl(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply extra large breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"xl\")\n",
     "    \n",
     "    @property\n",
-    "    def _2xl(self) -> 'BaseUtility':\n",
+    "    def _2xl(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply 2xl breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"2xl\")\n",
     "    \n",
     "    # Theme modifiers\n",
     "    @property\n",
-    "    def dark(self) -> 'BaseUtility':\n",
+    "    def dark(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply dark mode modifier.\"\"\"\n",
     "        return self.with_modifiers(\"dark\")\n",
     "    \n",
     "    # Motion modifiers\n",
     "    @property\n",
-    "    def motion_reduce(self) -> 'BaseUtility':\n",
+    "    def motion_reduce(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply reduced motion modifier.\"\"\"\n",
     "        return self.with_modifiers(\"motion-reduce\")\n",
     "    \n",
     "    @property\n",
-    "    def motion_safe(self) -> 'BaseUtility':\n",
+    "    def motion_safe(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply safe motion modifier.\"\"\"\n",
     "        return self.with_modifiers(\"motion-safe\")\n",
     "    \n",
     "    # Structural modifiers\n",
     "    @property\n",
-    "    def first(self) -> 'BaseUtility':\n",
+    "    def first(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply first child modifier.\"\"\"\n",
     "        return self.with_modifiers(\"first\")\n",
     "    \n",
     "    @property\n",
-    "    def last(self) -> 'BaseUtility':\n",
+    "    def last(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply last child modifier.\"\"\"\n",
     "        return self.with_modifiers(\"last\")\n",
     "    \n",
     "    @property\n",
-    "    def odd(self) -> 'BaseUtility':\n",
+    "    def odd(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply odd child modifier.\"\"\"\n",
     "        return self.with_modifiers(\"odd\")\n",
     "    \n",
     "    @property\n",
-    "    def even(self) -> 'BaseUtility':\n",
+    "    def even(\n",
+    "        self\n",
+    "    ) -> 'BaseUtility':  # TODO: Add return description\n",
     "        \"\"\"Apply even child modifier.\"\"\"\n",
     "        return self.with_modifiers(\"even\")\n",
     "    \n",
