--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -514,7 +514,9 @@
     "            return util\n",
     "        raise AttributeError(f\"'{self.__class__.__name__}' object has no attribute '{name}'\")\n",
     "    \n",
-    "    def describe(self) -> str:\n",
+    "    def describe(\n",
+    "        self\n",
+    "    ) -> str:  # TODO: Add return description\n",
     "        \"\"\"Return the documentation for this factory.\"\"\"\n",
     "        return self._doc"
    ]
