--- a/nbs/utilities/filters.ipynb
+++ b/nbs/utilities/filters.ipynb
@@ -124,7 +124,9 @@
     "    pixels: str\n",
     "    var: str\n",
     "    \n",
-    "    def format(self) -> str:\n",
+    "    def format(\n",
+    "        self\n",
+    "    ) -> str:  # TODO: Add return description\n",
     "        \"\"\"Format as Tailwind class suffix.\"\"\"\n",
     "        return self.name"
    ]
@@ -339,7 +341,9 @@
     "    shadow: str\n",
     "    var: str\n",
     "    \n",
-    "    def format(self) -> str:\n",
+    "    def format(\n",
+    "        self\n",
+    "    ) -> str:  # TODO: Add return description\n",
     "        \"\"\"Format as Tailwind class suffix.\"\"\"\n",
     "        return self.name"
    ]
