--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -1652,7 +1652,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def center_transform() -> str:\n",
+    "def center_transform(\n",
+    ") -> str:  # TODO: Add return description\n",
     "    \"\"\"Center an element using transform translate.\"\"\"\n",
     "    return combine_classes(\n",
     "        str(translate.x.negative(\"1/2\")),\n",
@@ -1668,7 +1669,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def hover_scale(scale: int = 110) -> str:\n",
+    "def hover_scale(\n",
+    "    scale: int = 110  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
     "    \"\"\"Create a hover scale effect.\"\"\"\n",
     "    return f\"hover:scale-{scale} transition-transform\""
    ]
@@ -1681,7 +1684,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def flip_card_3d(perspective_value: str = \"normal\") -> Dict[str, str]:\n",
+    "def flip_card_3d(\n",
+    "    perspective_value: str = \"normal\"  # TODO: Add description\n",
+    ") -> Dict[str, str]:  # TODO: Add return description\n",
     "    \"\"\"Get classes for a 3D flip card effect.\"\"\"\n",
     "    return {\n",
     "        \"container\": str(getattr(perspective, perspective_value)),\n",
@@ -1703,7 +1708,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def parallax_transform(speed: float = 0.5) -> str:\n",
+    "def parallax_transform(\n",
+    "    speed: float = 0.5  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
     "    \"\"\"Create a parallax transform effect.\"\"\"\n",
     "    return combine_classes(\n",
     "        str(translate.y(f\"calc(var(--scroll-y) * -{speed})\")),\n",
