--- a/nbs/utilities/typography.ipynb
+++ b/nbs/utilities/typography.ipynb
@@ -76,6 +76,7 @@
    "source": [
     "#| exports\n",
     "class FontFamily(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    SANS = \"sans\"\n",
     "    SERIF = \"serif\"\n",
     "    MONO = \"mono\"\n",
@@ -297,6 +298,7 @@
    "source": [
     "#| exports\n",
     "class FontWeight(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    THIN = \"thin\"\n",
     "    EXTRALIGHT = \"extralight\"\n",
     "    LIGHT = \"light\"\n",
@@ -354,6 +356,7 @@
    "source": [
     "#| exports\n",
     "class FontStretch(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    ULTRA_CONDENSED = \"ultra-condensed\"\n",
     "    EXTRA_CONDENSED = \"extra-condensed\"\n",
     "    CONDENSED = \"condensed\"\n",
@@ -765,6 +768,7 @@
    "source": [
     "#| exports\n",
     "class ListStylePosition(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    INSIDE = \"inside\"\n",
     "    OUTSIDE = \"outside\"\n",
     "\n",
@@ -780,6 +784,7 @@
    "source": [
     "#| exports\n",
     "class ListStyleType(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    DISC = \"disc\"\n",
     "    DECIMAL = \"decimal\"\n",
     "    NONE = \"none\"\n",
@@ -828,6 +833,7 @@
    "source": [
     "#| exports\n",
     "class TextAlign(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    LEFT = \"left\"\n",
     "    CENTER = \"center\"\n",
     "    RIGHT = \"right\"\n",
@@ -1006,6 +1012,7 @@
    "source": [
     "#| exports\n",
     "class DecorationStyle(str, Enum):\n",
+    "    \"TODO: Add class description\"\n",
     "    SOLID = \"solid\"\n",
     "    DOUBLE = \"double\"\n",
     "    DOTTED = \"dotted\"\n",
