--- a/nbs/cli/cli_config.ipynb
+++ b/nbs/cli/cli_config.ipynb
@@ -92,11 +92,18 @@
     "    # Helper patterns\n",
     "    helper_test_suffix: str = 'helper_examples'  # Suffix for helper test functions\n",
     "    \n",
-    "    def get_test_function_pattern(self, module_name: str, feature: str) -> str:\n",
+    "    def get_test_function_pattern(\n",
+    "        self,\n",
+    "        module_name: str,  # TODO: Add description\n",
+    "        feature: str  # TODO: Add description\n",
+    "    ) -> str:  # TODO: Add return description\n",
     "        \"\"\"Get the expected test function name for a module and feature.\"\"\"\n",
     "        return f\"{self.test_pattern_prefix}{module_name}_{feature}_{self.test_pattern_suffix}\"\n",
     "    \n",
-    "    def get_helper_test_function(self, module_name: str) -> str:\n",
+    "    def get_helper_test_function(\n",
+    "        self,\n",
+    "        module_name: str  # TODO: Add description\n",
+    "    ) -> str:  # TODO: Add return description\n",
     "        \"\"\"Get the expected helper test function name for a module.\"\"\"\n",
     "        return f\"{self.test_pattern_prefix}{module_name}_{self.helper_test_suffix}\""
    ]
@@ -119,7 +126,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_tailwind_config() -> LibraryConfig:\n",
+    "def get_tailwind_config(\n",
+    ") -> LibraryConfig:  # TODO: Add return description\n",
     "    \"\"\"Get configuration for cjm-fasthtml-tailwind library.\"\"\"\n",
     "    return LibraryConfig(\n",
     "        package_name='cjm_fasthtml_tailwind',\n",
@@ -156,12 +164,15 @@
     "# Global variable to store the active configuration\n",
     "_active_config: Optional[LibraryConfig] = None\n",
     "\n",
-    "def set_active_config(config: LibraryConfig) -> None:\n",
+    "def set_active_config(\n",
+    "    config: LibraryConfig  # TODO: Add description\n",
+    ") -> None:  # TODO: Add return description\n",
     "    \"\"\"Set the active library configuration.\"\"\"\n",
     "    global _active_config\n",
     "    _active_config = config\n",
     "\n",
-    "def get_active_config() -> LibraryConfig:\n",
+    "def get_active_config(\n",
+    ") -> LibraryConfig:  # TODO: Add return description\n",
     "    \"\"\"Get the active library configuration.\n",
     "    \n",
     "    If no configuration is set, returns the Tailwind config.\n",
@@ -185,7 +196,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def reset_config() -> None:\n",
+    "def reset_config(\n",
+    ") -> None:  # TODO: Add return description\n",
     "    \"\"\"Reset the active configuration to force re-detection.\"\"\"\n",
     "    global _active_config\n",
     "    _active_config = None"
@@ -209,7 +221,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_config_by_name(name: str) -> Optional[LibraryConfig]:\n",
+    "def get_config_by_name(\n",
+    "    name: str  # TODO: Add description\n",
+    ") -> Optional[LibraryConfig]:  # TODO: Add return description\n",
     "    \"\"\"Get a library configuration by name.\n",
     "    \n",
     "    Args:\n",
@@ -244,7 +258,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def list_available_configs() -> List[str]:\n",
+    "def list_available_configs(\n",
+    ") -> List[str]:  # TODO: Add return description\n",
     "    \"\"\"List all available library configurations.\"\"\"\n",
     "    return ['tailwind']"
    ]
@@ -257,7 +272,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_config_info(config: LibraryConfig) -> Dict[str, Any]:\n",
+    "def get_config_info(\n",
+    "    config: LibraryConfig  # TODO: Add description\n",
+    ") -> Dict[str, Any]:  # TODO: Add return description\n",
     "    \"\"\"Get information about a configuration.\n",
     "    \n",
     "    Returns:\n",
