Update no search results message with helper text.

--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -772,11 +772,17 @@
     "#| export\n",
     "def display_search_results(\n",
     "    results: List[SearchResult],  # TODO: Add description\n",
-    "    query: str  # TODO: Add description\n",
+    "    query: str,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Display search results in a formatted way.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
     "    if not results:\n",
     "        print(f\"No results found for '{query}'\")\n",
+    "        print(f\"Try '{config.cli_command} search {query} --include-source' to search source code of search in source code of examples and helpers\")\n",
+    "        print(f\"Or run '{config.cli_command} search -h' to see usage instructions\")\n",
     "        return\n",
     "    \n",
     "    try:\n",
