--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -781,6 +781,7 @@
     "    \n",
     "    if not results:\n",
     "        print(f\"No results found for '{query}'\")\n",
+    "        print(\"Recommendations:\")\n",
     "        print(f\"Try '{config.cli_command} search {query} --include-source' to also search in source code of examples and helpers\")\n",
     "        print(f\"Or run '{config.cli_command} search -h' to see usage instructions\")\n",
     "        return\n",
